All fonts and backgrounds are working

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -11,11 +11,11 @@
 } 
 
 body {
-  background: image_url('images/crossword.png');
+  background: image_url('crossword.png');
   font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
 
 .navbar {
-  background: image_url('images/cartographer.png');
+  background: image_url('cartographer.png');
   box-shadow: 0px 1px 3px #2a2a2a;
 }
