--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,12 +18,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-  background: image_url('images/crossword.png');
-  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+  background: image_url('crossword.png');
+font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
 }
 
 
 .navbar {
-  background: image_url('images/cartographer.png');
+  background: image_url('cartographer.png');
   box-shadow: 0px 1px 3px #2a2a2a;
 }
